:bento: add logo + fix AppBar alignment

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -68,11 +68,21 @@
 
 .header-container {
   display: flex;
-  justify-content: flex-end; }
+  font-size: 1.1rem; }
+  .header-container .logo-container, .header-container .gnb {
+    flex: none; }
+  .header-container .gnb {
+    margin-left: auto;
+    display: flex; }
+  .header-container .logo {
+    width: auto;
+    height: 2rem; }
   .header-container a,
   .header-container .router-link-exact-active .router-link-active,
   .header-container .sub-link {
     text-decoration: none; }
+  .header-container li.el-menu-item.is-active:not(.logo-li):not(.my-li) {
+    border-bottom: 2px solid #b33771; }
 
 .btnBoxRight {
   display: flex;
